force-app/main/default/objects/BPM_Annuity_Line__c/BPM_Annuity_Line__c.object-meta.xml
<CustomObject>
    <description>It will store all the bpm contracts at line level.</description>
    <label>BPM Annuity Line</label>
    <nameField>
        <displayFormat>BPMLine-{0000000}</displayFormat>
        <label>BPM Annuity Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BPM Annuity Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>