force-app/main/default/objects/BPM_Annuity_Line__c/fields/Bill_To_Pnt_Cust_Ind_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Pnt_Cust_Ind_Name__c</fullName>
    <label>Bill To Pnt Cust Ind Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>