force-app/main/default/objects/BPM_Annuity_Line__c/fields/Billed_Amt_Usd__c.field-meta.xml
<CustomField>
    <fullName>Billed_Amt_Usd__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Billed Amt Usd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>