force-app/main/default/objects/BPM_Annuity_Line__c/fields/BPM_Annuity_Header__c.field-meta.xml
<CustomField>
    <fullName>BPM_Annuity_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BPM Annuity Header</label>
    <referenceTo>BPM_Annuity__c</referenceTo>
    <relationshipLabel>BPM Annuity Lines</relationshipLabel>
    <relationshipName>BPM_Annuity_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>