force-app/main/default/objects/BPM_Annuity_Line__c/fields/Contract_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Contract_Nbr__c</fullName>
    <label>Contract Nbr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>