force-app/main/default/objects/BPM_Annuity_Line__c/fields/Contract_Subtype_Code__c.field-meta.xml
<CustomField>
    <fullName>Contract_Subtype_Code__c</fullName>
    <label>Contract Subtype Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>