force-app/main/default/objects/BPM_Annuity_Line__c/fields/Contracted_Expected_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Expected_Renewal_Date__c</fullName>
    <formula>IF(Contract_Duration__c &gt;=12, Contract_End_Date__c-135, Contract_End_Date__c- (11.25 *  Contract_Duration__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracted Expected Renewal Date</label>
    <type>Date</type>
</CustomField>