force-app/main/default/objects/BPM_Annuity_Line__c/fields/ETB_Date__c.field-meta.xml
<CustomField>
    <fullName>ETB_Date__c</fullName>
    <formula>IF( Invoice_Rule_Name__c ==&apos;Advance Invoice&apos;, Interface_Offset_Day_Nbr__c +  Period_Start_Date__c ,  Interface_Offset_Day_Nbr__c +   Period_End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETB Date</label>
    <type>Date</type>
</CustomField>