force-app/main/default/objects/BPM_Annuity_Line__c/fields/Header_Billing_Period_Name__c.field-meta.xml
<CustomField>
    <fullName>Header_Billing_Period_Name__c</fullName>
    <label>Header Billing Period Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>