force-app/main/default/objects/BPM_Annuity_Line__c/fields/Hold_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason_Description__c</fullName>
    <label>Hold Reason Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>