force-app/main/default/objects/BPM_Annuity_Line__c/fields/Instance_Id__c.field-meta.xml
<CustomField>
    <fullName>Instance_Id__c</fullName>
    <label>Instance Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>