force-app/main/default/objects/BPM_Annuity_Line__c/fields/Interface_Offset_Day_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Interface_Offset_Day_Nbr__c</fullName>
    <label>Interface Offset Day Nbr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>