force-app/main/default/objects/BPM_Annuity_Line__c/fields/Invoice_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Rule_Name__c</fullName>
    <label>Invoice Rule Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>