force-app/main/default/objects/BPM_Annuity_Line__c/fields/IsEquipmentLine__c.field-meta.xml
<CustomField>
    <fullName>IsEquipmentLine__c</fullName>
    <formula>Unbilled_Amt_Usd__c &lt;5000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsEquipmentLine</label>
    <type>Checkbox</type>
</CustomField>