force-app/main/default/objects/BPM_Annuity_Line__c/fields/Offering_Account_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Offering_Account_Type_Code__c</fullName>
    <label>Offering Account Type Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>