force-app/main/default/objects/BPM_Annuity_Line__c/fields/Region_Desc__c.field-meta.xml
<CustomField>
    <fullName>Region_Desc__c</fullName>
    <label>Region Desc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>