force-app/main/default/objects/BPM_Annuity_Line__c/fields/Unbilled_Amt_Usd__c.field-meta.xml
<CustomField>
    <fullName>Unbilled_Amt_Usd__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unbilled Amt Usd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>